Fixed overflow on class list.
git-svn-id: http://jsdoc-toolkit.googlecode.com/svn/branches/version2.0@517 c4b26cf2-672e-0410-81b6-737671b986b9

--- a/templates/jsdoc/static/default.css
+++ b/templates/jsdoc/static/default.css
@@ -58,6 +58,7 @@ pre.code
 	margin: 0 0 0 8px;
 	font-family: arial, sans-serif;
 	font-size: 1em;
+	overflow: auto;
 }
 
 .classList li
